# API/routes/campaign.js
@@ -1,8 +1,15 @@
 const express = require('express');
 const router = express.Router();
-const { createNewCampaign, getCampaignsByUserId, getCampaignByIdController, getCampaingnByLinkController } = require('../controllers/campaign.controller');
+const { 
+    createNewCampaign, 
+    getCampaignsByUserId,
+    getCampaignByIdController, 
+    getCampaingnByLinkController,
+    saveCampaignFeedbackController, 
+} = require('../controllers/campaign.controller');
 
 router.post('/', createNewCampaign);
+router.patch('/save-feedback', saveCampaignFeedbackController);
 router.get('/user/:userId', getCampaignsByUserId);
 router.get('/campaign/:campaignId', getCampaignByIdController);
 router.get('/link/:linkUuid', getCampaingnByLinkController);
