# API/swagger-output.json
@@ -238,6 +238,45 @@
         }
       }
     },
+    "/api/v1/campaigns/save-feedback": {
+      "patch": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "campaignId": {
+                    "example": "any"
+                  },
+                  "linkUuid": {
+                    "example": "any"
+                  },
+                  "feedback": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/campaigns/user/{userId}": {
       "get": {
         "description": "",
@@ -270,6 +309,35 @@
         "parameters": [
           {
             "name": "campaignId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/campaigns/link/{linkUuid}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "linkUuid",
             "in": "path",
             "required": true,
             "schema": {
